force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Competitor_Name_Other__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name_Other__c</fullName>
    <businessOwnerUser>gpikes@illumina.com</businessOwnerUser>
    <description>If the Tender was lost, who was the competitor who won it? Used when competitor name does not exist in Illumina’s database.</description>
    <label>Competitor Name - Other</label>
    <type>TextArea</type>
</CustomField>