force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Complaint_Non_conf_Product_POC_phone__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Non_conf_Product_POC_phone__c</fullName>
    <description>Complaint &amp; Non-conf. Product POC phone</description>
    <label>Complaint &amp; Non-conf. Product POC phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>