force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Complaint_Non_conforming_Product_POC__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Non_conforming_Product_POC__c</fullName>
    <description>Complaint &amp; Non-conforming Product POC</description>
    <label>Complaint &amp; Non-conforming Product POC</label>
    <length>80</length>
    <type>Text</type>
</CustomField>