force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <description>Field to store Created Date</description>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>