force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Year__c</fullName>
    <description>Field to store the Current Year</description>
    <formula>TEXT(YEAR( TODAY() ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year</label>
    <type>Text</type>
</CustomField>