force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Date_awarded__c.field-meta.xml
<CustomField>
    <fullName>Date_awarded__c</fullName>
    <businessOwnerUser>gpikes@illumina.com</businessOwnerUser>
    <description>Date Illumina was awarded the Tender</description>
    <label>Date Awarded</label>
    <type>DateTime</type>
</CustomField>