force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Date_TAM_decision_received__c.field-meta.xml
<CustomField>
    <fullName>Date_TAM_decision_received__c</fullName>
    <businessOwnerUser>gpikes@illumina.com</businessOwnerUser>
    <description>Date TAM decided whether or not to pursue the Tender.</description>
    <label>Date TAM Decision Received</label>
    <type>DateTime</type>
</CustomField>