force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Discount_Justification__c.field-meta.xml
<CustomField>
    <fullName>Discount_Justification__c</fullName>
    <description>Field to store Discount Justification</description>
    <label>Discount Justification</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>