force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Display_Purchase_Conditions__c.field-meta.xml
<CustomField>
        <fullName>Display_Purchase_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to allow users to show/hide purchase conditions on outputs</description>
        <label>Display Purchase Conditions</label>
        <type>Checkbox</type>
</CustomField>