force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <description>Field to store Distribution Channel</description>
    <formula>IF(
OR( 
ISPICKVAL(Apttus__Account__r.Account_Group__c,&quot;Distributor&quot;),
AND(ISPICKVAL(Apttus__Account__r.Account_Group__c,&quot;Prospect&quot;),  NOT(ISBLANK(TEXT(Apttus__Account__r.Channel_Partner_Type__c))))
),
&apos;02&apos;,&apos;01&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distribution Channel</label>
    <type>Text</type>
</CustomField>