force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Eligible_Lead_Days__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Lead_Days__c</fullName>
    <description>Field to store the Agreement's lead days</description>
    <inlineHelpText>The maximum number of days required from the time Illumina receives the Partner’s invoice, to be eligible to receive the fee.</inlineHelpText>
    <label>Eligible Lead Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>