force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Estimated_Tender_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Tender_Value__c</fullName>
    <description>Field to store the Agreement's estimated tender value</description>
    <label>Estimated Tender Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>