force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Exclusivity__c</fullName>
    <description>Field to store the Agreement's exclusivity</description>
    <defaultValue>false</defaultValue>
    <label>Exclusivity</label>
    <type>Checkbox</type>
</CustomField>