force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Freight_Charge__c.field-meta.xml
<CustomField>
    <fullName>Freight_Charge__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Indicate what kind of freight  charge was negotiated</description>
    <label>Freight Charge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Non-standard</fullName>
            </value>
            <value>
                <fullName>Do Not Charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>