force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Fully_Signed_Contract_Attached__c.field-meta.xml
<CustomField>
    <fullName>Fully_Signed_Contract_Attached__c</fullName>
    <businessOwnerUser>gpikes@illumina.com</businessOwnerUser>
    <description>A copy of the fully executed contract/tender needs to be included in the record.  Please indicate yes or no it if has been attached.</description>
    <label>Fully Signed Contract Attached?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>