force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/General_Confidentiality_Binding_on_ILMN__c.field-meta.xml
<CustomField>
    <fullName>General_Confidentiality_Binding_on_ILMN__c</fullName>
    <description>Field to store General Confidentiality Binding on ILMN</description>
    <defaultValue>false</defaultValue>
    <label>General Confidentiality Binding on ILMN</label>
    <type>Checkbox</type>
</CustomField>