force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Generate__c.field-meta.xml
<CustomField>
    <fullName>Generate__c</fullName>
    <description>Conditionally show the &quot;Generate&quot; custom button if the contract status category is &quot;Request&quot;.</description>
    <formula>IF(
AND(
ISPICKVAL(Apttus__Status_Category__c, &quot;Request&quot;),
$Profile.Name != $Label.SalesRepProfileName,
OR(AND(
Number_Of_Agreement_Line_Items__c &gt; 0,
Validation_Status__c = &quot;Validate Completed&quot;,
ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Approved&quot;)
),AND(ISPICKVAL(Line_Items_Required_Optional__c, &quot;Optional&quot;),OR(ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Approved&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Not Submitted&quot;)),Number_Of_Agreement_Line_Items__c = 0
),AND(ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Approved&quot;), RecordType.DeveloperName = $Label.AgreementRecordTypeOpenOffer))),
IF(
OR(
$User.UIThemeDisplayed == &apos;Theme4d&apos;,
$User.UIThemeDisplayed == &apos;Theme4t&apos;,
$User.UIThemeDisplayed == &apos;Theme4u&apos;
),
HYPERLINK(&quot;/apex/Apttus__LightningSelectTemplate?id=&quot;&amp;Id &amp; &quot;&amp;action=Generate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;),
HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot;&amp;Id &amp; &quot;&amp;action=Generate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;)
),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Generate the Agreement</inlineHelpText>
    <label>Generate</label>
    <type>Text</type>
</CustomField>