force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Generate_Supporting_Document__c.field-meta.xml
<CustomField>
    <fullName>Generate_Supporting_Document__c</fullName>
    <description>Conditionally show the &quot;Generate Supporting Document&quot; custom button if the validation status is either &apos;Validate Completed&apos; or &apos;Activate Completed and also status category is neither &apos;Expired&apos;,&apos;Terminated&apos;,&apos;Amended&apos; nor &apos; Renewed&apos;.</description>
    <formula>IF(
AND(
       OR(
        Validation_Status__c = &apos;Validate Completed&apos;,
        Validation_Status__c = &apos;Activate Completed&apos;
    ),
    NOT(
        OR(
            ISPICKVAL(Apttus__Status_Category__c, &apos;Expired&apos;),
            ISPICKVAL(Apttus__Status_Category__c, &apos;Terminated&apos;),
            ISPICKVAL(Apttus__Status_Category__c, &apos;Amended&apos;),
            ISPICKVAL(Apttus__Status_Category__c, &apos;Renewed&apos;)
        )
    ) 
),
IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;), HYPERLINK(&quot;/apex/Apttus__LightningSelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Generate_Supporting_Document&amp;templateType=Supporting_Document&quot;, IMAGE(&quot;/resource/Apttus__Button_GenerateSupportingDocument&quot;, &quot;Generate Supporting Document&quot;),&quot;_self&quot;), HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Generate_Supporting_Document&amp;templateType=Supporting_Document&quot;, IMAGE(&quot;/resource/Apttus__Button_GenerateSupportingDocument&quot;, &quot;Generate Supporting Document&quot;),&quot;_self&quot;)),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Generate the supporting document.</inlineHelpText>
    <label>Generate Supporting Document</label>
    <type>Text</type>
</CustomField>