force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Has_Acceptance_Upon_Installation__c.field-meta.xml
<CustomField>
    <fullName>Has_Acceptance_Upon_Installation__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Has Acceptance Upon Installation</description>
    <label>Has Acceptance Upon Installation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACI-Standard</fullName>
            </value>
            <value>
                <fullName>ACI-Non-Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>