force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Has_Material_Changes_to_Rights_of_Use__c.field-meta.xml
<CustomField>
    <fullName>Has_Material_Changes_to_Rights_of_Use__c</fullName>
    <description>Has Material Changes to Rights of use?</description>
    <defaultValue>false</defaultValue>
    <label>Has Material Changes to Rights of Use</label>
    <type>Checkbox</type>
</CustomField>