force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Has_No_Rights_of_Use__c.field-meta.xml
<CustomField>
    <fullName>Has_No_Rights_of_Use__c</fullName>
    <description>Field to store if the user has the rights to use</description>
    <defaultValue>false</defaultValue>
    <label>Has No Rights of Use</label>
    <type>Checkbox</type>
</CustomField>