force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Has_SLAs__c.field-meta.xml
<CustomField>
    <fullName>Has_SLAs__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>Check  if there is a penalty for KPI SLA Breach</description>
    <label>Penalty-KPI SLA Breach</label>
    <type>Checkbox</type>
</CustomField>