force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Hide_Product_Family_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Hide_Product_Family_Discounts__c</fullName>
    <description>Field to store if Product Family Discounts should be hidden</description>
    <defaultValue>false</defaultValue>
    <label>Hide Product Family Discounts</label>
    <type>Checkbox</type>
</CustomField>