force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Incoterm__c.field-meta.xml
<CustomField>
    <fullName>Incoterm__c</fullName>
    <description>Field to store Incoterm</description>
    <inlineHelpText>Incoterm for standard shipments by Illumina to Channel Partner</inlineHelpText>
    <label>Incoterm</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Inco_Term_1</valueSetName>
    </valueSet>
</CustomField>