force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Initial_Escalation_Contact_e_mail__c.field-meta.xml
<CustomField>
    <fullName>Initial_Escalation_Contact_e_mail__c</fullName>
    <description>Initial Escalation Contact e-mail</description>
    <label>Initial Escalation Contact e-mail</label>
    <length>40</length>
    <type>Text</type>
</CustomField>