force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Is_Agreement_under_Approvals_submission__c.field-meta.xml
<CustomField>
    <fullName>Is_Agreement_under_Approvals_submission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for DCP-37225</description>
    <label>Is Agreement under Approvals submission</label>
    <type>Checkbox</type>
</CustomField>