force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Is_Auto_Approved__c.field-meta.xml
<CustomField>
    <fullName>Is_Auto_Approved__c</fullName>
    <description>Field to store if an Agreement does not require any Approvals</description>
    <defaultValue>false</defaultValue>
    <label>Is Auto Approved?</label>
    <type>Checkbox</type>
</CustomField>