force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Is_Validated_Successful__c.field-meta.xml
<CustomField>
    <fullName>Is_Validated_Successful__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to check if Agreement was validated successfully once.</description>
    <label>Is Validated Successful</label>
    <type>Checkbox</type>
</CustomField>