force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Justification_for_No_Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_No_Agreement_Value__c</fullName>
    <description>Field is created to capture the Justification for not providing the total agreement values on Standing Quotes.</description>
    <label>Justification for No Agreement Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comparison Customer</fullName>
            </value>
            <value>
                <fullName>Existing Customer Agreement</fullName>
            </value>
            <value>
                <fullName>Government Entities or funding</fullName>
            </value>
            <value>
                <fullName>Indirect Customer</fullName>
            </value>
            <value>
                <fullName>Open Offer</fullName>
            </value>
            <value>
                <fullName>Tender</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>