force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/KPIs_for_on_site_response_HRS_DAYS__c.field-meta.xml
<CustomField>
    <fullName>KPIs_for_on_site_response_HRS_DAYS__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Enter agreed upon KPI info</description>
    <label>KPIs (for on-site response) HRS/DAYS</label>
    <length>36</length>
    <type>Text</type>
</CustomField>