force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Lead_Fee__c.field-meta.xml
<CustomField>
    <fullName>Lead_Fee__c</fullName>
    <description>Field to store Lead Fee</description>
    <inlineHelpText>lllumina will pay the Partner a fee of the total net amount received for the sale of any Eligible Products.</inlineHelpText>
    <label>Lead Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>