force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Lead_Gen_Eligible_Products__c.field-meta.xml
<CustomField>
    <fullName>Lead_Gen_Eligible_Products__c</fullName>
    <description>Products that are eligible for lead generation</description>
    <inlineHelpText>Products eligible for lead gen fee.</inlineHelpText>
    <label>Lead Gen Eligible Products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>