force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Legacy_Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Agreement_Number__c</fullName>
    <description>Legacy/Historic agreement number of the agreement if it was migrated from another system or source (ex_._ Customer Agreement records migrated into Apttus CLM will have a legacy agreement number). This represents the agreement number of this agreement in its source system. Agreements created in Apttus CLM will not have a legacy agreement number.</description>
    <label>Legacy Agreement Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>