force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Max_Approval_Level_Approved_Discount__c.field-meta.xml
<CustomField>
    <fullName>Max_Approval_Level_Approved_Discount__c</fullName>
    <description>Field to capture maximum approval level for discount approvals so that discount approval is retriggered with PPM approvals</description>
        <label>Max Approval Level(Approved Discount)</label>
        <summarizedField>Apttus__AgreementLineItem__c.Approval_Level_RO_Discount__c</summarizedField>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.Apttus_Approval__Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved, Rejected</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
</CustomField>