force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Non_Standard_Retention_Period__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Retention_Period__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Non-standard retention of documents duration</description>
    <label>Non-Standard Retention Period</label>
    <length>29</length>
    <type>Text</type>
</CustomField>