force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Non_Standard_Retention_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Retention_Requirement__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>Agreed upon non-standard retention of documents</description>
    <label>Non-Standard Retention Requirement</label>
    <type>Checkbox</type>
</CustomField>