force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Number_Of_Agreement_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Agreement_Line_Items__c</fullName>
    <description>Roll up to store the number of line items</description>
    <label>Number Of Agreement Line Items</label>
    <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>