force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Number_Of_Clause_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Clause_Approvals__c</fullName>
    <description>Roll up to store the number of clauses on Agreement</description>
    <label>Number Of Clause Approvals</label>
    <summaryFilterItems>
        <field>Apttus__Agreement_Clause__c.Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approval Required</value>
    </summaryFilterItems>
    <summaryForeignKey>Apttus__Agreement_Clause__c.Apttus__Agreement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>