force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Number_of_extensions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_extensions__c</fullName>
    <businessOwnerUser>gpikes@illumina.com</businessOwnerUser>
    <description>The number of extensions made to the Tender.</description>
    <label>Number of Extensions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>