force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/On_site_Manufacturing_Inspection__c.field-meta.xml
<CustomField>
    <fullName>On_site_Manufacturing_Inspection__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>There is an On-site Manufacturing Inspection</description>
    <label>On-site Manufacturing Inspection</label>
    <type>Checkbox</type>
</CustomField>