force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/One_Time_Agreement_Products__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Agreement_Products__c</fullName>
    <description>Field to store OTA Products</description>
    <label>One Time Agreement Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>