force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Open_Offer_Election_And_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Open_Offer_Election_And_Product_Type__c</fullName>
    <description>Field to Store the Agreement line item Customer Election value and Product type values.</description>
    <label>Open Offer Election And Product Type</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>