force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Open_Offer_Product_and_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Open_Offer_Product_and_Line_Type__c</fullName>
    <description>Field to Store the Open Offer agreement line items line type and Product&apos;s material class values.</description>
    <label>Open Offer Product and Line Type</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>