force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Open_Offer_Status__c.field-meta.xml
<CustomField>
    <fullName>Open_Offer_Status__c</fullName>
    <description>This Field is to identify the current status of the open offer agreement</description>
    <label>Open Offer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request</fullName>
                <default>true</default>
                <label>Request</label>
            </value>
            <value>
                <fullName>Eligibility Approval</fullName>
            </value>
            <value>
                <fullName>Affiliate Confirmation</fullName>
            </value>
            <value>
                <fullName>Election Template</fullName>
            </value>
            <value>
                <fullName>Signatures</fullName>
            </value>
            <value>
                <fullName>In Effect</fullName>
            </value>
            <value>
                <fullName>Amended</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>