force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Original_submission_deadline__c.field-meta.xml
<CustomField>
    <fullName>Original_submission_deadline__c</fullName>
    <businessOwnerUser>gpikes@illumina.com</businessOwnerUser>
    <description>Date of Original submission deadline</description>
    <label>Original Submission Deadline</label>
    <type>DateTime</type>
</CustomField>