force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason__c</fullName>
    <description>This field is to capture the additional reasons if the Amendment reason is Other</description>
    <inlineHelpText>Identifies the other reason for Amending the Agreement</inlineHelpText>
    <label>Other Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>