force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Parent_Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Agreement_Number__c</fullName>
    <description>Field stores parent agreement number which is also sent to SAP</description>
    <label>Parent Agreement Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>