force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Partner_POC_email__c.field-meta.xml
<CustomField>
    <fullName>Partner_POC_email__c</fullName>
    <description>Partner POC email</description>
    <label>Partner POC email</label>
    <length>40</length>
    <type>Text</type>
</CustomField>