force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Payment_is_upon_Invoice_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Payment_is_upon_Invoice_Receipt__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>Payment is upon Invoice Receipt</description>
    <label>Payment is upon Invoice Receipt</label>
    <type>Checkbox</type>
</CustomField>