force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Penalty_Data_Protection__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Data_Protection__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>Check if there is a penalty for Data Protection</description>
    <label>Penalty-Data Protection</label>
    <type>Checkbox</type>
</CustomField>