force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Pre_Award_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Award_Submission_Date__c</fullName>
    <description>Field to store Pre-Award Submission Deadline</description>
    <label>Pre-Award Submission Date</label>
    <type>DateTime</type>
</CustomField>