force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Price_Group__c.field-meta.xml
<CustomField>
    <fullName>Price_Group__c</fullName>
    <description>Button to view Price Group</description>
    <label>Price Group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>