force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Price_Group_Description__c.field-meta.xml
<CustomField>
    <fullName>Price_Group_Description__c</fullName>
    <description>Field to store description for Price Group</description>
    <label>Price Group Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>