force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Price_Increase_Restrictions_Information__c.field-meta.xml
<CustomField>
    <fullName>Price_Increase_Restrictions_Information__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Price Increase Restrictions Information</description>
    <label>Price Increase Restrictions Information</label>
    <length>39</length>
    <type>Text</type>
</CustomField>