force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Pricing_Generation_Status__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Generation_Status__c</fullName>
    <description>Field to store generation status of SAP</description>
    <inlineHelpText>This field status the current status of integration for generating CSP document.</inlineHelpText>
    <label>Pricing Generation Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>