force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Primary_Assay__c.field-meta.xml
<CustomField>
    <fullName>Primary_Assay__c</fullName>
    <description>DCP-43237</description>
    <label>Primary Assay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>