force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Product_Version_Change_Notice_Details__c.field-meta.xml
<CustomField>
    <fullName>Product_Version_Change_Notice_Details__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>User should add the details of Non-standard production change notification</description>
    <label>Product Version Change Notice Details</label>
    <length>37</length>
    <type>Text</type>
</CustomField>