force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>What products/services are covered by the agreement</description>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instruments</fullName>
            </value>
            <value>
                <fullName>Consumables</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Warranty Services</fullName>
            </value>
            <value>
                <fullName>Training Courses</fullName>
            </value>
            <value>
                <fullName>Relocation Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>